some more styling

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <style type="text/css">
 
+body { background-color: #000 ; }
+
 #navTd       { width: 200px ; vertical-align: top ; color: #080 ; }
 #meImg       { width: 200px ; height: 200px ; }
 ul           { font-size: small ; }
