some more styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 body { background-color: #000 ; }
 
+#mainTable                { position:relative ; top: -8px ; }
+#projectsDiv , #chatFrame { position:relative ; top:  8px ; }
+
 #navTd       { width: 200px ; vertical-align: top ; color: #080 ; }
 #meImg       { width: 200px ; height: 200px ; }
 ul           { font-size: small ; }
@@ -12,16 +15,12 @@ ul           { font-size: small ; }
 
 #chatFrame { width: 100% ; height: 480px ; }
 
-#mainTable                { position:relative ; top: -8px ; }
-#projectsDiv , #chatFrame { position:relative ; top:  8px ; }
-
-#projectsH3      { text-align: center ; }
-.projectDiv { border: 1px solid #080 ; border-radius: 8px ; margin: 8px ;
-              background-color: #111 ; color: #088 ; }
-.projectTitleDiv , .projectDescDiv , .projectLinksDiv { margin: 4px ; }
-.projectTitleDiv { font-weight: bold ; }
-.projectDescDiv  { margin-left: 40px ; font-style: italic ; }
-.projectLinksDiv { margin-left: 80px ; }
+#projectsH3      { text-align: center ; color: #088 ; }
+.projectDiv      { border: 1px solid #080 ; border-radius: 8px ; margin: 8px ;
+                   background-color: #111 ; color: #088 ; }
+.projectTitleDiv { margin: 4px ; font-weight: bold ; }
+.projectDescDiv  { margin: 4px ; margin-left: 40px ; font-style: italic ; }
+.projectLinksDiv { margin: 4px ; margin-left: 80px ; }
 
 </style>
 
