--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ ul           { font-size: small ; }
 <script type="text/javascript">
 
 var VLINE_APP_URL    = "https://bill-auger.herokuapp.com" ;
-var PROJECTS_H3_TEXT = "Some neat stuff i made:" ;
+var PROJECTS_H3_TEXT = "some neat stuff i made:" ;
 
 var CONTENT_TD_ID           = 'contentTd' ;
 var CHAT_FRAME_ID           = 'chatFrame' ;
@@ -50,7 +50,7 @@ var Projects = new Array() ;
 
 var linjam = new Object() ;
 linjam[PROJECT_TITLE_KEY]  = 'LinJam (2014 jun)' ;
-linjam[PROJECT_DESC_KEY]   = 'A cross platform NINJAM client with linear chain-streaming mode.' ;
+linjam[PROJECT_DESC_KEY]   = 'A cross platform NINJAM client with linear chain-streaming mode. Built upon the JUCE framework. Requires libninjam' ;
 linjam[PROJECT_SITE_KEY]   = '' ;
 linjam[PROJECT_SOURCE_KEY] = 'https://github.com/linjam/linjam' ;
 linjam[PROJECT_LANG_KEY]   = 'c++' ;
