--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ a.visited { color: #304 ; }
 
 
 #mainTable , #chatFrame , #contentHr , #projectsDiv { position:relative ; }
-#chatFrame , #projectsDiv , .projectDiv             { border-radius:10px ; }
-#chatFrame                                          { border: 1px solid #0996ed ; }
+#projectsDiv , .projectDiv                          { border-radius:10px ; }
+#chatFrame                                          { border: none ; }
 #projectsDiv , .projectDiv                          { border: 1px solid #080 ; }
 #mainTable   { top: -8px ; width: 100% ; }
 #chatFrame   { top:  8px ; }
@@ -19,10 +19,11 @@ a.visited { color: #304 ; }
 #projectsDiv { top:  16px ; }
 
 
-#navTd  { width: 200px ; vertical-align: top ; }
-#meImg  { width: 200px ; height: 200px ; }
-.listTd { width: 32px ; text-align: right ; padding-right: 8px ; }
-.icon   { width: 16px ; height: 16px ; }
+#navTd     { width: 200px ; vertical-align: top ; }
+#meImg     { width: 200px ; height: 200px ; }
+#listTable { font-size: 12px ; }
+.listTd    { width: 32px ; text-align: right ; padding-right: 8px ; }
+.icon      { width: 16px ; height: 16px ; }
 
 
 #contentTd         { padding-left: 5px ; padding-right: 5px ; }
@@ -31,7 +32,7 @@ a.visited { color: #304 ; }
 .projectDiv        { margin: 10px ; padding: 10px ; background-color: #181818 ; }
 .projectTitleTable { width: 100% ; }
 .projectTitleTd    { font-weight: bold ; }
-.projectDateTd     { font-weight: bold ; text-align: right ; width:100px ; }
+.projectDateTd     { font-weight: bold ; text-align: right ; width:120px ; }
 .projectDescDiv    { padding-left: 40px ; font-style: italic ; }
 .projectLinksDiv   { padding-left: 80px ; }
 
@@ -61,7 +62,7 @@ var LOC_TEXT      = 'massachusetts' ;
 var LIST_TEXT1    = 'bitsmith' ;
 var LIST_TEXT2    = 'musical nerd' ;
 var LIST_TEXT3    = 'all around swell guy' ;
-var PROJECTS_TEXT = "Some neat stuff i made:"
+var PROJECTS_TEXT = "some neat stuff i made:"
 
 var CONTENT_TD_ID             = 'contentTd' ;
 var CHAT_FRAME_ID             = 'chatFrame' ;
