--- a/BillAugerResume2014.html
+++ b/BillAugerResume2014.html
@@ -41,14 +41,10 @@ There shouldn&#39;t be one.&quot;
 </pre>
 <pre>
 &quot;Whitespace is your friend.  It should not carry semantics.&quot;
-    -- me, often
+    -- myself, often
 </pre>
 
-<p class="c0"><span class="c6">&nbsp; &nbsp; Ok, perhaps mine is slighter on profundity; call it an exercise in guru emulation.  In summary, I would say that if one is familiar with the similarities and differences between Java vs Smalltalk and between an ML vs a Lisp; and one can see why someone might prefer Smalltalk and Racket over their more obtuse counterparts; then one can likely infer much &quot;about me&quot;.  Knowing how to &quot;rock out&quot; helps too.</span></p>
+<p class="c0"><span class="c6">&nbsp; &nbsp; Ok, perhaps mine is slighter on profundity; call it an exercise in guru emulation.  In summary, I would say that if one is familiar with the similarities and differences between Java vs. Smalltalk and between an ML vs. a Lisp; and one can appreciate the elegance of Smalltalk and Racket over their more obtuse counterparts; then much could be inferred &quot;about me&quot; and my general philosophy regarding programming.  A propensity for &quot;rocking out&quot; is also helpful.</span></p>
 
 <p class="c0 c2"><span class="c6"></span></p></body></html>
-
-
-
-
 
