--- a/index.html
+++ b/index.html
@@ -331,11 +331,27 @@ lang   = 'bash' ;
 addProject(title , date , desc , site , source , lang) ;
 
 title  = 'LinJam' ;
-date   = '(2014 jun)' ;
+date   = '(2014 may)' ;
 desc   = 'A cross platform NINJAM client with linear chain-streaming mode.' ;
 site   = '' ;
 source = 'https://github.com/linjam/linjam' ;
 lang   = 'c++ / JUCE,libninjam' ;
+addProject(title , date , desc , site , source , lang) ;
+
+title  = 'Saas-Puppy Linux' ;
+date   = '(2014 apr)' ;
+desc   = 'A minimal RubyOnRails development environment based on PuppyLinux.' ;
+site   = '' ;
+source = 'http://puppyisos.org/saas-puppy.html' ;
+lang   = 'Linux ISO' ;
+addProject(title , date , desc , site , source , lang) ;
+
+title  = 'Chuck Song Builder' ;
+date   = '(2013 oct)' ;
+desc   = 'Some chuck classes for notating ditties.' ;
+site   = '' ;
+source = 'https://github.com/bill-auger/chuck-song-builder' ;
+lang   = 'ChucK' ;
 addProject(title , date , desc , site , source , lang) ;
 
 title  = 'Bridgin' ;
