update git-branch-status scrot

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ var name , date , desc , site , source , lang ;
 
 title  = 'AvCaster' ;
 date   = '(2015 sep)' ;
-desc   = 'A simple native gStreamer GUI for screencast, webcam, and audio streaming.' ;
+desc   = 'A light-weight native gStreamer GUI for screencast, webcam, and audio streaming.' ;
 site   = '' ;
 source = 'https://github.com/bill-auger/av-caster' ;
 lang   = 'c++ / JUCE,gStreamer,libircclient' ;
